# Oxidation

./: Cargo.toml  data.db
src/: main.rs
static/: about.html  index.html
static/assets/: index.css
