[package]
name = "http_attempt"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# -- Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["fs"] }
tower-cookies = "0.11.0"
# -- Others
lazy-regex = "3"
strum_macros = "0.27.1"
uuid = {version = "1", features = ["v4","fast-rng",]}
# -- sqlite
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
